// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should run arethetypeswrong as expected 1`] = `
[
  "[arethetypeswrong] test-wildcard v0.0.0

 No problems found 🌟
┌───────────────────┬───────────────────┐
│                   │ "test-wildcard/*" │
├───────────────────┼───────────────────┤
│ node10            │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from CJS) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from ESM) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ bundler           │ (wildcard)        │
└───────────────────┴───────────────────┘",
]
`;

exports[`should run arethetypeswrong without emoji 1`] = `
[
  "[arethetypeswrong] test-wildcard v0.0.0

 No problems found
┌───────────────────┬───────────────────┐
│                   │ "test-wildcard/*" │
├───────────────────┼───────────────────┤
│ node10            │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from CJS) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from ESM) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ bundler           │ (wildcard)        │
└───────────────────┴───────────────────┘",
]
`;

exports[`should run arethetypeswrong without summary 1`] = `
[
  "[arethetypeswrong] test-wildcard v0.0.0

┌───────────────────┬───────────────────┐
│                   │ "test-wildcard/*" │
├───────────────────┼───────────────────┤
│ node10            │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from CJS) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ node16 (from ESM) │ (wildcard)        │
├───────────────────┼───────────────────┤
│ bundler           │ (wildcard)        │
└───────────────────┴───────────────────┘",
]
`;
